my third commit

--- a/index.html
+++ b/index.html
@@ -53,6 +53,35 @@
                 </div>
             </div>
         </section>
+        <h3 style="font-weight:bold;font-size:40px;margin-top:80px;margin-bottom:20px;margin-left:20px ;">Recent News</h3>
+        <p style="font-weight: 100px;font-size: 16px;margin-left: 20px;margin-bottom: 20px;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+        <section style="display: flex; justify-content: space-evenly;height: 400px;width: 1200px;background-color: aliceblue;border-radius: 24px;align-items: center;margin-left: 20px;">
+            <div>
+                <img style="border-radius: 36px;margin-top: 25px;" src="assets/satelite.png" alt="">
+            </div>
+            <div>
+                <h3 style="font-weight: bold;font-size: 32px;margin-top: 20px;">Bangladesh Launches New Satellite</h3>
+                <img style="margin-bottom: 0px;" src="assets/al-jazeera.png" alt="">
+                <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and <br> accepted as a common obligation of all people and all countries—not until then shall we, <br>
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button style="height:45px ;width:135px ;background-color:greenyellow ;font-weight: 300;font-size:18px ;color: azure;border: none;border-radius: 8px;">Read More</button>
+            </div>
+        </section>
+        <section style="display: flex; justify-content: space-evenly;height: 400px;width: 1200px;background-color: darkgray;border-radius: 24px;align-items: center;margin-left: 20px;margin-top: 30px;">
+            <div>
+                <h3 style="font-weight: bold;font-size: 32px;margin-top: 20px;">Bangladesh Launches New Satellite</h3>
+                <img style="margin-bottom: 0px;" src="assets/al-jazeera.png" alt="">
+                <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and <br> accepted as a common obligation of all people and all countries—not until then shall we, <br>
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button style="height:45px ;width:135px ;background-color:gray ;font-weight:300 ;font-size:18px ;color: azure;border: none;border-radius: 8px;">Read More</button>
+            </div>
+            <div>
+                <img style="border-radius: 36px;margin-top: 25px;" src="assets/satelite.png" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
