my fourth commit

--- a/index.html
+++ b/index.html
@@ -85,7 +85,23 @@
 
     </main>
     <footer>
+             <section style="background-color: aquamarine;height:465px ;width:1200px ;border-radius: 34px;margin-left: 20px;">
+                <h2 style="font-weight:bold;text-align:center;font-size: 30px;color: darkgray;">Donate Today</h2>
+                <p style="font-weight: 100px;font-size: 16px;margin-left: 20px;margin-bottom: 20px;text-align: center;color:darkslategray;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                <div style="display: flex;justify-content: space-evenly;margin-top: 35px;">
+                    <div class="div">100 Taka</div>
+                    <div class="div" style="background-color: burlywood;">200 Taka</div>
+                    <div class="div">500 Taka</div>
+                    <div class="div">1000 Taka</div>
+                </div>
+                <div style="height:65px ;width: 1000px;margin-top: 30px;background-color: blanchedalmond;margin-left:90px;text-align: center;align-content: center;color:gray;border-radius: 25px">
+                      <p style="font-weight:100px ;font-size:20px ;">Other Amount (Taka)</p>
+                </div>
+                <div style="height:55px ;width: 140px;background-color:greenyellow ;border-radius: 20px;text-align: center;align-content: center;color:violet;margin-top:30px ;margin:20px auto;">
+                      <p style="font-weight:200px ;font-size:18px ;">Donate Now</p>
+                </div>
 
+             </section>
     </footer>
 </body>
 </html>
