--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY 1ST PROJECT</title>
-    <link rel="stylesheet" href="styles/blog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body>
+<body class="fira-sans-thin">
     <header>
                <section class="apple">
                           <div class="head">
@@ -53,6 +53,14 @@
                 </div>
             </div>
         </section>
+        <div style="height: 150px;width: 1200px;background-color: antiquewhite;border-radius: 15px;margin-left: 20px;margin-top: 20px;background-image: url('assets/quote-bg.png');background-repeat: no-repeat;">
+            
+            <div>
+                <p style="align-items: center;padding: 20px;margin-left: 10px;">"WE WILL MAKE A GOOD COUNTRY . WHICH WILL HAVE LOT OF JOB SECTOTRS AS IF THER ARE NO UNEMPLOYMENT PROBELMS".</p>
+                <h6 style="font-weight: bold;margin-left: 20px;">Dr. Muhammad Yunus...</h6>
+                <p style="margin-left: 20px;">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </div>
         <h3 style="font-weight:bold;font-size:40px;margin-top:80px;margin-bottom:20px;margin-left:20px ;">Recent News</h3>
         <p style="font-weight: 100px;font-size: 16px;margin-left: 20px;margin-bottom: 20px;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
 
@@ -101,6 +109,12 @@
                       <p style="font-weight:200px ;font-size:18px ;">Donate Now</p>
                 </div>
 
+             </section>
+             <section style="background-color:goldenrod;height: 400px;width: 1200px;border-radius: 20px;text-align: center;align-content: center;margin-top: 30px;margin-left: 20px;">
+                <h3 style="font-weight:bold;text-align:center;font-size: 40px;color:white;">Subscribe Newsletter</h3>
+                <p style="margin-top: 10px;color: beige;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+                <input class="btn" type="text" placeholder="Enter your email here" style="width: 600px;"><button class="btn" style="width: 150px;background-color: aquamarine;">Subscribe</button>
+                <p style="color: antiquewhite;">We promise not to spam you!</p>
              </section>
     </footer>
 </body>
